# sample-until

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/sample_until/: __init__.py  sample_until.py  sample_until_folded.py  stopping_conditions.py  time_elapsed.py  utils.py
tests/: test_f_args.py  test_fold.py  test_sample_until.py  test_sample_until_size.py  test_time_elapsed.py  test_utils.py
